Icons installed on-demand and add possibility to set iconEncoded